add subdomain scanner & rework save directory
(also add the wordlist locally)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,6 @@ wave = "wave_cli.cli:cli"
 
 [tool.setuptools]
 packages = ["wave_cli"]
+
+[tool.setuptools.package-data]
+"wave_cli.wordlists" = ["*.txt"]
